--- a/src/components/Datepicker/datepicker-input.css
+++ b/src/components/Datepicker/datepicker-input.css
@@ -5,8 +5,8 @@
   width: -moz-available;
 }
 
-.form-control {
-  border-radius: var(--sgds-border-radius) 0 0 var(--sgds-border-radius);
+.form-control-group {
+  border-radius: var(--sgds-form-border-radius-md) 0 0 var(--sgds-form-border-radius-md);
 }
 
 .input-feedback {
