--- a/src/components/Checkbox/checkbox.css
+++ b/src/components/Checkbox/checkbox.css
@@ -16,13 +16,18 @@ input {
 }
 
 .form-check {
-  display: block;
+  display: flex;
   margin-bottom: var(--sgds-spacer-2);
   min-height: 2rem;
+  flex-direction: row;
 }
 
 .form-check .form-check-input {
   margin-right: var(--sgds-form-input-margin-right);
+}
+.form-check-label-container{
+  display: flex;
+  flex-direction: column;
 }
 
 .form-check-input {
@@ -69,7 +74,7 @@ input {
 .form-check-input.is-invalid:focus {
   box-shadow: var(--sgds-form-focus-invalid-box-shadow);
 }
-.form-check-input.is-invalid ~ .form-check-label {
+.form-check-input.is-invalid ~ .form-check-label-container > .form-check-label {
   color: var(--sgds-form-invalid-color);
 }
 .form-check-inline {
