--- a/src/components/Checkbox/checkbox.css
+++ b/src/components/Checkbox/checkbox.css
@@ -19,17 +19,11 @@ input {
   display: flex;
   margin-bottom: var(--sgds-spacer-2);
   min-height: 2rem;
-  flex-direction: row;
 }
 
 .form-check .form-check-input {
   margin-right: var(--sgds-form-input-margin-right);
 }
-.form-check-label-container{
-  display: flex;
-  flex-direction: column;
-}
-
 .form-check-input {
   appearance: none;
   background-color: var(--sgds-form-bg);
@@ -78,7 +72,7 @@ input {
   color: var(--sgds-form-invalid-color);
 }
 .form-check-inline {
-  display: inline-block;
+  display: inline-flex;
   vertical-align: text-top;
   margin-right: var(--sgds-form-inline-margin-right);
   margin-bottom: 0;
