--- a/src/components/Skeleton/skeleton.css
+++ b/src/components/Skeleton/skeleton.css
@@ -1,5 +1,6 @@
 .skeleton {
-  background-color: var(--sgds-default-bg-translucent);
+  --bg: var(--sgds-default-bg-translucent);
+  background-color: var(--bg);
   display: flex;
   flex-direction: column;
   gap: var(--sgds-gap-xs);
@@ -8,16 +9,29 @@
   background-color: transparent;
 }
 
-.skeleton.skeleton-paragraph > div[class^="skeleton-row"] {
-  background-color: var(--sgds-default-bg-translucent);
-  height: 20px;
-}
-
-.skeleton.skeleton-paragraph.skeleton-paragraph-heading > div[class^="skeleton-row"] {
-  height: 40px;
-}
-
-.skeleton.skeleton-paragraph.auto-size-rows > div[class^="skeleton-row"],
-.skeleton.skeleton-paragraph.skeleton-paragraph-heading > div[class^="skeleton-row"] {
+.skeleton.skeleton-paragraph.auto-size-rows > div[class*="skeleton-row"] {
   height: -webkit-fill-available;
+  background-color: var(--sgds-default-bg-translucent);
+}
+
+.sheen {
+  --sheen-color: var(--sgds-default-bg-translucent-subtle);
+  background: linear-gradient(270deg, var(--sheen-color) 0%, var(--bg) 33.33%, var(--bg) 66.67%, var(--sheen-color) 100%);
+  background-size: 400% 100%;
+  animation: sheen 8s ease-in-out infinite;
+}
+
+@keyframes sheen {
+  0% {
+    background-position: 200% 0;
+  }
+  to {
+    background-position: -200% 0;
+  }
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .sheen {
+    animation: none;
+  }
 }
