--- a/src/components/Skeleton/skeleton.css
+++ b/src/components/Skeleton/skeleton.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--sgds-gap-xs);
+  border-radius: var(--sgds-border-radius-sm);
 }
 .skeleton.skeleton-paragraph {
   background-color: transparent;
@@ -12,6 +13,7 @@
 .skeleton.skeleton-paragraph.auto-size-rows > div[class*="skeleton-row"] {
   height: -webkit-fill-available;
   background-color: var(--sgds-default-bg-translucent);
+  border-radius: var(--sgds-border-radius-sm);
 }
 
 .sheen {
