--- a/src/components/Accordion/accordion.css
+++ b/src/components/Accordion/accordion.css
@@ -1,5 +1,4 @@
-:host {
-  --accordion-active-color: var(--sgds-primary);
+:host([variant="border"]) .accordion {
+  border: var(--sgds-border-width-1) solid var(--sgds-default-border-color-muted);
+  border-radius: var(--sgds-border-radius-md);
 }
- 
-
