--- a/src/css/reboot.css
+++ b/src/css/reboot.css
@@ -1,5 +1,7 @@
 /* BODY */
 body {
+  color: var(--sgds-body-color);
+  font-family: var(--sgds-font-family-brand);
   font-size: var(--sgds-font-size-2);
   font-weight: var(--sgds-font-weight-regular);
   line-height: var(--sgds-line-height-body);
@@ -7,6 +9,7 @@ body {
 }
 /* LABEL */
 label {
+  color: var(--sgds-label-color);
   font-size: var(--sgds-font-size-2);
   font-weight: var(--sgds-font-weight-regular);
   line-height: var(--sgds-line-height-body);
@@ -46,8 +49,8 @@ h3,
 h4,
 h5,
 h6 {
+  color: var(--sgds-header-color);
   font-family: var(--sgds-font-family-brand);
-  color: #000;
   font-style: normal;
 }
 h1,
@@ -99,6 +102,7 @@ h6 {
 }
 /* CAPTION */
 caption {
+  color: var(--sgds-caption-color);
   font-size: var(--sgds-font-size-1);
   font-weight: var(--sgds-font-weight-regular);
   line-height: var(--sgds-line-height-body);
