docs(themeing): addon day and night theming feature

--- a/.storybook/global.css
+++ b/.storybook/global.css
@@ -31,3 +31,7 @@ sgds-faq-grid {
   flex-direction: column;
   gap: var(--sgds-gap-2-xs);
 }
+
+.docs-story{
+  background: var(--sgds-default-bg);
+}
