--- a/src/components/Masthead/masthead.css
+++ b/src/components/Masthead/masthead.css
@@ -58,8 +58,7 @@ a:hover {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: 0.75rem;
-  row-gap: 0;
+  gap: 0 0.75rem;
 }
 
 .sgds-masthead-identify-icon {
