--- a/src/internals/CloseButton/close-button.css
+++ b/src/internals/CloseButton/close-button.css
@@ -3,59 +3,46 @@
   display: inline-flex;
 }
 
+sgds-icon {
+  align-items: center;
+  justify-content: center;
+}
+
 .btn-close {
-  position: relative;
   cursor: pointer;
   border: 0;
   padding: 0;
   width: var(--sgds-dimension-32);
   height: var(--sgds-dimension-32);
-  border: var(--sgds-border-width-1) solid var(--sgds-default-border-color-transparent);
   border-radius: var(--sgds-close-btn-border-radius);
   background-color: var(--sgds-default-bg-transparent);
 }
 
-.btn-close::before {
-  content: '';
-  color: var(--sgds-default-color);
-  background-color: currentColor;
-  mask-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='currentColor'%3E%3Cpath d='M5.61396 5.61394C5.75461 5.47329 5.94538 5.39427 6.14429 5.39427C6.3432 5.39427 6.53397 5.47329 6.67462 5.61394L11.9779 10.9172L17.2812 5.61394C17.4219 5.47329 17.6126 5.39427 17.8116 5.39427C18.0105 5.39427 18.2012 5.47329 18.3419 5.61394C18.4825 5.7546 18.5616 5.94536 18.5616 6.14427C18.5616 6.34319 18.4825 6.53395 18.3419 6.6746L13.0386 11.9779L18.3419 17.2812C18.4825 17.4219 18.5616 17.6126 18.5616 17.8115C18.5616 18.0104 18.4825 18.2012 18.3419 18.3419C18.2012 18.4825 18.0105 18.5615 17.8116 18.5615C17.6126 18.5615 17.4219 18.4825 17.2812 18.3419L11.9779 13.0386L6.67462 18.3419C6.53397 18.4825 6.3432 18.5615 6.14429 18.5615C5.94538 18.5615 5.75461 18.4825 5.61396 18.3419C5.47331 18.2012 5.39429 18.0104 5.39429 17.8115C5.39429 17.6126 5.47331 17.4219 5.61396 17.2812L10.9173 11.9779L5.61396 6.6746C5.47331 6.53395 5.39429 6.34319 5.39429 6.14427C5.39429 5.94536 5.47331 5.7546 5.61396 5.61394Z'/%3E%3C/svg%3E");
-  mask-repeat: no-repeat;
-  mask-position: center;
-  -webkit-mask-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='currentColor'%3E%3Cpath d='M5.61396 5.61394C5.75461 5.47329 5.94538 5.39427 6.14429 5.39427C6.3432 5.39427 6.53397 5.47329 6.67462 5.61394L11.9779 10.9172L17.2812 5.61394C17.4219 5.47329 17.6126 5.39427 17.8116 5.39427C18.0105 5.39427 18.2012 5.47329 18.3419 5.61394C18.4825 5.7546 18.5616 5.94536 18.5616 6.14427C18.5616 6.34319 18.4825 6.53395 18.3419 6.6746L13.0386 11.9779L18.3419 17.2812C18.4825 17.4219 18.5616 17.6126 18.5616 17.8115C18.5616 18.0104 18.4825 18.2012 18.3419 18.3419C18.2012 18.4825 18.0105 18.5615 17.8116 18.5615C17.6126 18.5615 17.4219 18.4825 17.2812 18.3419L11.9779 13.0386L6.67462 18.3419C6.53397 18.4825 6.3432 18.5615 6.14429 18.5615C5.94538 18.5615 5.75461 18.4825 5.61396 18.3419C5.47331 18.2012 5.39429 18.0104 5.39429 17.8115C5.39429 17.6126 5.47331 17.4219 5.61396 17.2812L10.9173 11.9779L5.61396 6.6746C5.47331 6.53395 5.39429 6.34319 5.39429 6.14427C5.39429 5.94536 5.47331 5.7546 5.61396 5.61394Z'/%3E%3C/svg%3E");
-  -webkit-mask-repeat: no-repeat;
-  -webkit-mask-position: center;
-  box-sizing: content-box;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: var(--sgds-border-radius);
-  width: var(--sgds-icon-size-lg);
-  height: var(--sgds-icon-size-lg);
-}
-.btn-close-light::before {
+.btn-close-light sgds-icon {
   color: var(--sgds-default-color-on-dark);
 }
-.btn-close-dark::before {
+
+.btn-close-dark sgds-icon {
   color: var(--sgds-default-color-on-light);
 }
+
 .btn-close:hover {
   background-color: var(--sgds-default-bg-translucent);
 }
 
 .btn-close:focus,
 .btn-close:focus-visible {
-  box-shadow: var(--sgds-box-shadow-focus);
   outline: 0;
+  box-shadow: var(--sgds-box-shadow-focus);
+  background-color: var(--sgds-default-bg-translucent);
 }
 
 .btn-close-sm {
-  width: var(--sgds-dimension-24);
-  height: var(--sgds-dimension-24);
+  width: var(--sgds-dimension-16);
+  height: var(--sgds-dimension-16);
 }
 
-.btn-close.btn-close-sm::before {
+.btn-close.btn-close-sm sgds-icon {
   width: var(--sgds-icon-size-sm);
   height: var(--sgds-icon-size-sm);
 }
