style(root): add css variable for icon size

--- a/src/themes/root.css
+++ b/src/themes/root.css
@@ -145,6 +145,7 @@
   --sgds-icon-size-lg: 1.5rem;
   --sgds-icon-size-xl: 2rem;
   --sgds-icon-size-2-xl: 3rem;
+  --sgds-icon-size-3-xl: 4rem;
 
   /* Primitive - Letter Spacing */
   --sgds-letter-spacing-tighter: -1px;
