chore(icon): add new size options

--- a/src/components/Icon/icon.css
+++ b/src/components/Icon/icon.css
@@ -2,13 +2,29 @@
   width: var(--sgds-icon-size-sm);
   height: var(--sgds-icon-size-sm);
 }
-:host([size="lg"]) svg {
-  width: var(--sgds-icon-size-lg);
-  height: var(--sgds-icon-size-lg);
+
+:host([size="md"]) svg {
+  width: var(--sgds-icon-size-md);
+  height: var(--sgds-icon-size-md);
+}
+
+:host([size="xl"]) svg {
+  width: var(--sgds-icon-size-xl);
+  height: var(--sgds-icon-size-xl);
+}
+
+:host([size="2-xl"]) svg {
+  width: var(--sgds-icon-size-2-xl);
+  height: var(--sgds-icon-size-2-xl);
+}
+
+:host([size="3-xl"]) svg {
+  width: var(--sgds-icon-size-3-xl);
+  height: var(--sgds-icon-size-3-xl);
 }
 
 svg {
   display: block;
-  width: var(--sgds-icon-size-md);
-  height: var(--sgds-icon-size-md);
+  width: var(--sgds-icon-size-lg);
+  height: var(--sgds-icon-size-lg);
 }
