--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -19,7 +19,7 @@
   margin: var(--sgds-margin-3-xs) 0;
 }
 
-slot[name="footer-title"]::slotted(*) {
+slot[name="title"]::slotted(*) {
   --sgds-header-color: var(--sgds-default-color-inverse);
   --sgds-font-size-6: var(--sgds-font-size-5);
   --sgds-margin-2-xs: var(--sgds-margin-none);
@@ -33,7 +33,7 @@ slot[name="footer-title"]::slotted(*) {
   margin-bottom: var(--sgds-margin-2-xs, --sgds-margin-none);
 }
 
-slot[name="footer-description"]::slotted(*) {
+slot[name="description"]::slotted(*) {
   --sgds-font-size-2: var(--sgds-font-size-3);
   --sgds-paragraph-spacing-xl: var(--sgds-margin-none);
   color: var(--sgds-default-color-muted);
@@ -85,18 +85,20 @@ slot[name="footer-description"]::slotted(*) {
   gap: var(--sgds-gap-sm);
 }
 
-slot[name="footer-social-media"]::slotted(a) {
+slot[name="social-media"]::slotted(a) {
   --sgds-link-color: light-dark(var(--sgds-gray-000), var(--sgds-gray-900));
-  color: var(--sgds-link-color);
+  --sgds-body-color: light-dark(var(--sgds-gray-000), var(--sgds-gray-900));
+  color: var(--sgds-body-color, --sgds-link-color);
+  display: inline-flex;
 }
 
-slot[name="footer-social-media"]::slotted(a:hover) {
+slot[name="social-media"]::slotted(a:hover) {
   --sgds-link-color-emphasis: light-dark(var(--sgds-gray-000), var(--sgds-gray-900));
   color: var(--sgds-link-color-emphasis);
 }
 
-slot[name="footer-social-media"]::slotted(a:focus),
-slot[name="footer-social-media"]::slotted(a:focus-visible) {
+slot[name="social-media"]::slotted(a:focus),
+slot[name="social-media"]::slotted(a:focus-visible) {
   --sgds-link-color-emphasis: light-dark(var(--sgds-gray-000), var(--sgds-gray-900));
   outline: 0;
   box-shadow: var(--sgds-box-shadow-focus);
