style(form): add hint and label style for disabled

--- a/src/styles/form-hint.css
+++ b/src/styles/form-hint.css
@@ -2,3 +2,7 @@
   color: var(--sgds-form-color-subtle);
   font-size: var(--sgds-font-size-1);
 }
+
+.form-text.disabled {
+  opacity: var(--sgds-opacity-50);
+}
